--- a/src/local_lidar_planner/package.xml
+++ b/src/local_lidar_planner/package.xml
@@ -12,13 +12,17 @@
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>sensor_msgs_py</depend>
   <depend>nav_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>rclpy</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
   <depend>tf2_geometry_msgs</depend>
   <depend>pcl_conversions</depend>
   <depend>pcl_ros</depend>
+  <depend>unitree_api</depend>
+  <depend>go2_sport_api</depend>
 
   <export>
   </export>
