--- a/src/local_lidar_planner/CMakeLists.txt
+++ b/src/local_lidar_planner/CMakeLists.txt
@@ -3,6 +3,10 @@ project(local_lidar_planner)
 
 find_package(ament_cmake REQUIRED)
 
+if(DEFINED CATKIN_INSTALL_INTO_PREFIX_ROOT)
+  message(STATUS "CATKIN_INSTALL_INTO_PREFIX_ROOT=${CATKIN_INSTALL_INTO_PREFIX_ROOT} (ignored, compatibility only)")
+endif()
+
 install(PROGRAMS
   scripts/local_lidar_planner_simple.py
   scripts/path_follower_simple.py
