--- a/src/local_lidar_planner/package.xml
+++ b/src/local_lidar_planner/package.xml
@@ -9,14 +9,15 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>geometry_msgs</depend>
-  <depend>nav_msgs</depend>
-  <depend>rclpy</depend>
-  <depend>sensor_msgs</depend>
-  <depend>sensor_msgs_py</depend>
-  <depend>tf2_ros</depend>
-  <depend>unitree_api</depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>nav_msgs</exec_depend>
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>sensor_msgs_py</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
+  <exec_depend>unitree_api</exec_depend>
 
   <export>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
