--- a/src/local_lidar_planner/CMakeLists.txt
+++ b/src/local_lidar_planner/CMakeLists.txt
@@ -10,6 +10,7 @@ endif()
 install(PROGRAMS
   scripts/local_lidar_planner_simple.py
   scripts/path_follower_simple.py
+  scripts/utlidar_transformer.py
   DESTINATION lib/${PROJECT_NAME})
 
 install(DIRECTORY
