--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,12 +13,14 @@ find_package(geometry_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
 
 add_executable(base_link_waypoint_node src/base_link_waypoint_node.cpp)
 ament_target_dependencies(
   base_link_waypoint_node
   rclcpp
   geometry_msgs
+  sensor_msgs
   tf2
   tf2_ros
   tf2_geometry_msgs)
